--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,19 +1,15 @@
-# nixpacks.toml - Attempt 2
+# nixpacks.toml - Simplest attempt to force Python 3.11 availability
 
-# Explicitly tell Nixpacks to ONLY use the Python provider,
-# overriding any auto-detected ones.
-providers = ["python"] # No "..."
+providers = ["python"] # Only use the Python provider
 
 [phases.setup]
-# Install Python 3.11 and GDBM from Nixpkgs.
-# pkgs.python311 provides the python3.11 executable.
-nixPkgs = ["pkgs.gdbm", "pkgs.python311"]
+# This ensures python3.11 and gdbm are available in the environment.
+# The Python provider should pick up this Python version.
+nixPkgs = ["pkgs.python311", "pkgs.gdbm"]
 
-# We are not using [phases.install.cmds] for now, to keep it simple.
-# The [python].version setting should be the primary way to control this.
+# No [phases.install] cmds for now.
 
 [python]
-# Tell the Nixpacks Python provider which version to use for all its operations.
-# Nixpacks should internally use the correct executable for this version,
-# e.g., python3.11 -m venv ...
+# This tells the Python provider to target Python 3.11.
+# It should use python3.11 -m venv ... internally.
 version = "3.11"
